@@ -5,8 +5,13 @@ Version 7.0.0
       share most of the implementation.
     * cctool config setting renamed to cpptool, cctool now defines the compiler used for new
       c_library etc rules. This is a breaking change.
-  	* Similarly defaultoptcppflags and defaultdbgcppflags introduced.
-	* The defines argument to cc_library now accepts a dict of token name -> value.
+    * Similarly defaultoptcppflags and defaultdbgcppflags introduced.
+    * The defines argument to cc_library now accepts a dict of token name -> value.
+    * Timeouts in .plzconfig are now given as durations instead of plain ints.
+      The default is seconds but they can be suffixed with units (m, s, ms, etc).
+      Interpretation of any existing values is unchanged apart from metrics.frequency which
+      was inconsistently interpreted as milliseconds, and will now be interpreted as seconds
+      if no unit is given. This would obviously only affect anyone who'd overridden that value.
 
 
 Version 6.1.2
